<resources>
    <string name="app_name">Calculator</string>
    <string name="title_section1">calculator</string>
    <string name="title_section2">graph</string>
    <string name="title_section3">savelist</string>
    <string name="calsavename">name : </string>
    <string name="calculationresult">result : </string>
    <string name="calculation">calculation : </string>
    <string name="graphsavename">name : </string>
    <string name="graph1">graph1 : </string>
    <string name="graph2">graph2 : </string>
    <string name="graph3">graph3 : </string>
    <string name="banner_ad_unit_id">ca-app-pub-4096758347953049/6794051211</string>
</resources>
